--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -726,6 +726,7 @@
   "mno_enterprise.templates.dashboard.provisioning.subscriptions.states.cancelled": "cancelled",
   "mno_enterprise.templates.dashboard.provisioning.subscriptions.states.aborted": "aborted",
   "mno_enterprise.templates.dashboard.provisioning.subscriptions.modify": "Modify subscription",
+  "mno_enterprise.templates.dashboard.provisioning.subscriptions.cannot_modify": "Cannot be modified",
   "mno_enterprise.templates.dashboard.provisioning.subscriptions.cancel": "Cancel subscription",
   "mno_enterprise.templates.dashboard.provisioning.subscriptions.cancel_modal.title": "Cancel subscription",
   "mno_enterprise.templates.dashboard.provisioning.subscriptions.cancel_modal.body": "Do you want to cancel this subscription?",
