[OPAL-420] Buttons for different edit actions

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -688,6 +688,11 @@
   "mno_enterprise.templates.dashboard.provisioning.summary.description": "Description",
   "mno_enterprise.templates.dashboard.provisioning.summary.price": "Price",
   "mno_enterprise.templates.dashboard.provisioning.summary.go_to_my_app": "Go to my app",
+  "mno_enterprise.templates.dashboard.provisioning.subscription.edit": "Edit",
+  "mno_enterprise.templates.dashboard.provisioning.subscription.change": "Change plan",
+  "mno_enterprise.templates.dashboard.provisioning.subscription.renew": "Renew",
+  "mno_enterprise.templates.dashboard.provisioning.subscription.suspend": "Suspend",
+  "mno_enterprise.templates.dashboard.provisioning.subscription.reactivate": "Reactivate",
   "mno_enterprise.templates.dashboard.provisioning.subscription.back": "back",
   "mno_enterprise.templates.dashboard.provisioning.subscription.info": "Info",
   "mno_enterprise.templates.dashboard.provisioning.subscription.subscription_info": "Subscription info",
