[MNOE-1034] Get rid of local-products-listing in exchange for products-listing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -744,11 +744,11 @@
   "mno_enterprise.templates.dashboard.marketplace.index.applications": "Products",
   "mno_enterprise.templates.dashboard.marketplace.index.reseller_products": "{appname}'s products",
   "mno_enterprise.templates.dashboard.marketplace.index.search": "Search",
-  "mno_enterprise.templates.dashboard.marketplace.index.compare": "Compare application",
-  "mno_enterprise.templates.dashboard.marketplace.index.select_apps": "Compare up to 4 applications",
-  "mno_enterprise.templates.dashboard.marketplace.index.toastr.error": "You can only compare up to 4 applications.",
+  "mno_enterprise.templates.dashboard.marketplace.index.compare": "Compare products",
+  "mno_enterprise.templates.dashboard.marketplace.index.select_products": "Compare up to 4 products",
+  "mno_enterprise.templates.dashboard.marketplace.index.toastr.error": "You can only compare up to 4 products.",
   "mno_enterprise.templates.dashboard.marketplace.index.cancel": "Cancel",
-  "mno_enterprise.templates.dashboard.marketplace.index.compare_apps": "Compare",
+  "mno_enterprise.templates.dashboard.marketplace.index.compare_products": "Compare",
   "mno_enterprise.templates.dashboard.marketplace.show.back": "Back",
   "mno_enterprise.templates.dashboard.marketplace.show.start_app": "Start Now!",
   "mno_enterprise.templates.dashboard.marketplace.show.launch_app": "Launch app",
