--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -725,6 +725,7 @@
   "mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.externally_managed": "Subscription plan is managed by the application and billed via Maestrano",
   "mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.billed_locally": "Billing is operated via Maestrano",
   "mno_enterprise.templates.dashboard.provisioning.confirm.licenses": "Licenses",
+  "mno_enterprise.templates.dashboard.provisioning.confirm.order_type": "Order type",
   "mno_enterprise.templates.dashboard.provisioning.summary.title": "Order summary",
   "mno_enterprise.templates.dashboard.provisioning.summary.order_being_processed": "Your order is being processed by the provider.",
   "mno_enterprise.templates.dashboard.provisioning.summary.manage_subscriptions": "You can manage your subscriptions and view its status in <a href=\"#!/subscriptions\">your subscriptions page</a>.",
@@ -734,6 +735,10 @@
   "mno_enterprise.templates.dashboard.provisioning.summary.price": "Price",
   "mno_enterprise.templates.dashboard.provisioning.summary.go_to_my_app": "Go to my app",
   "mno_enterprise.templates.dashboard.provisioning.summary.order_type": "Order type",
+  "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.title": "Pricing Information",
+  "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.single_billing_disabled": "Subscription plan is managed by the application",
+  "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.externally_managed": "Subscription plan is managed by the application and billed via Maestrano",
+  "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.billed_locally": "Billing is operated via Maestrano",
   "mno_enterprise.templates.dashboard.provisioning.subscription.back": "back",
   "mno_enterprise.templates.dashboard.provisioning.subscription.info": "Info",
   "mno_enterprise.templates.dashboard.provisioning.subscription.subscription_info": "Subscription info",
