--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -734,6 +734,7 @@
   "mno_enterprise.templates.dashboard.provisioning.summary.price": "Price",
   "mno_enterprise.templates.dashboard.provisioning.summary.go_to_my_app": "Go to my app",
   "mno_enterprise.templates.dashboard.provisioning.summary.order_type": "Order type",
+  "mno_enterprise.templates.dashboard.provisioning.summary.licenses": "Licenses",
   "mno_enterprise.templates.dashboard.provisioning.subscription.back": "back",
   "mno_enterprise.templates.dashboard.provisioning.subscription.info": "Info",
   "mno_enterprise.templates.dashboard.provisioning.subscription.subscription_info": "Subscription info",
