Conditionally show max licenses on confirm and summary

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -739,6 +739,7 @@
   "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.single_billing_disabled": "Subscription plan is managed by the application",
   "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.externally_managed": "Subscription plan is managed by the application and billed via Maestrano",
   "mno_enterprise.templates.dashboard.provisioning.summary.pricing_info.billed_locally": "Billing is operated via Maestrano",
+  "mno_enterprise.templates.dashboard.provisioning.summary.licenses": "Licenses",
   "mno_enterprise.templates.dashboard.provisioning.subscription.back": "back",
   "mno_enterprise.templates.dashboard.provisioning.subscription.info": "Info",
   "mno_enterprise.templates.dashboard.provisioning.subscription.subscription_info": "Subscription info",
